werkzeugkasten/twowaysql/twowaysql/grammar/TwoWaySqlParser.java
// $ANTLR 3.1.1 D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g 2008-12-04 18:11:53

package twowaysql.grammar;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class TwoWaySqlParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGINNODE", "IFNODE", "EXPRESSIONNODE", "ELSENODE", "ELSEIFNODE", "BINDNODE", "INBINDNODE", "TXTNODE", "ROOTNODE", "IDENT", "SYMBOLS", "QUOTED", "SYM_BIND", "SYM_C", "SYM_LP", "SYM_RP", "C_ST", "C_ED", "C_LN_ST", "C_LN_ED", "IF", "ELSEIF", "ELSE", "BEGIN", "END", "IN", "SYM_Q", "LN_R", "LN_N", "CHAR", "WS", "LT", "WHITE_SPACES"
    };
    public static final int BINDNODE=9;
    public static final int TXTNODE=11;
    public static final int LT=35;
    public static final int C_ST=20;
    public static final int QUOTED=15;
    public static final int SYM_RP=19;
    public static final int INBINDNODE=10;
    public static final int ELSE=26;
    public static final int SYM_LP=18;
    public static final int CHAR=33;
    public static final int C_LN_ST=22;
    public static final int EOF=-1;
    public static final int C_ED=21;
    public static final int IF=24;
    public static final int ELSEIFNODE=8;
    public static final int WHITE_SPACES=36;
    public static final int ELSEIF=25;
    public static final int WS=34;
    public static final int SYM_Q=30;
    public static final int IN=29;
    public static final int BEGIN=27;
    public static final int IFNODE=5;
    public static final int IDENT=13;
    public static final int SYMBOLS=14;
    public static final int SYM_C=17;
    public static final int END=28;
    public static final int EXPRESSIONNODE=6;
    public static final int SYM_BIND=16;
    public static final int ELSENODE=7;
    public static final int C_LN_ED=23;
    public static final int BEGINNODE=4;
    public static final int LN_N=32;
    public static final int LN_R=31;
    public static final int ROOTNODE=12;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "txt", "ifcomment", "endcomment", "begincomment", 
        "charactors", "expression", "linecomment", "blockcomment", "txts", 
        "comment", "twowaySQL", "elsenode", "inbindchars", "inbind", "bindcomment", 
        "elseifnode", "elseifcomment", "elsecomment"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public TwoWaySqlParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public TwoWaySqlParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public TwoWaySqlParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return TwoWaySqlParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g"; }


    // TestHeteroAST
    static class TxtNode extends CommonTree {
    	public TxtNode(int ttype) {
    		super(new CommonToken(ttype,""));
    		System.out.println(ttype);
    	}
    }


    public static class twowaySQL_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twowaySQL"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:47:1: twowaySQL : txt EOF -> ^( ROOTNODE txt ) ;
    public final TwoWaySqlParser.twowaySQL_return twowaySQL() throws RecognitionException {
        TwoWaySqlParser.twowaySQL_return retval = new TwoWaySqlParser.twowaySQL_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        TwoWaySqlParser.txt_return txt1 = null;


        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_txt=new RewriteRuleSubtreeStream(adaptor,"rule txt");
        try { dbg.enterRule(getGrammarFileName(), "twowaySQL");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(47, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:47:11: ( txt EOF -> ^( ROOTNODE txt ) )
            dbg.enterAlt(1);

            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:47:13: txt EOF
            {
            dbg.location(47,13);
            pushFollow(FOLLOW_txt_in_twowaySQL106);
            txt1=txt();

            state._fsp--;

            stream_txt.add(txt1.getTree());
            dbg.location(47,17);
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_twowaySQL108);  
            stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: txt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 48:2: -> ^( ROOTNODE txt )
            {
                dbg.location(48,5);
                // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:48:5: ^( ROOTNODE txt )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(48,7);
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ROOTNODE, "ROOTNODE"), root_1);

                dbg.location(48,16);
                adaptor.addChild(root_1, stream_txt.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(49, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "twowaySQL");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "twowaySQL"

    public static class txt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "txt"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:1: txt : ( comment | inbind | txts )+ ;
    public final TwoWaySqlParser.txt_return txt() throws RecognitionException {
        TwoWaySqlParser.txt_return retval = new TwoWaySqlParser.txt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TwoWaySqlParser.comment_return comment3 = null;

        TwoWaySqlParser.inbind_return inbind4 = null;

        TwoWaySqlParser.txts_return txts5 = null;



        try { dbg.enterRule(getGrammarFileName(), "txt");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(51, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:5: ( ( comment | inbind | txts )+ )
            dbg.enterAlt(1);

            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:7: ( comment | inbind | txts )+
            {
            root_0 = (CommonTree)adaptor.nil();

            dbg.location(51,7);
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:7: ( comment | inbind | txts )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=4;
                try { dbg.enterDecision(1);

                switch ( input.LA(1) ) {
                case C_ST:
                    {
                    int LA1_2 = input.LA(2);

                    if ( ((LA1_2>=IDENT && LA1_2<=SYM_RP)||LA1_2==IF||LA1_2==BEGIN) ) {
                        alt1=1;
                    }


                    }
                    break;
                case C_LN_ST:
                    {
                    int LA1_3 = input.LA(2);

                    if ( ((LA1_3>=IDENT && LA1_3<=SYM_RP)||LA1_3==BEGIN) ) {
                        alt1=1;
                    }


                    }
                    break;
                case IN:
                    {
                    alt1=2;
                    }
                    break;
                case IDENT:
                case SYMBOLS:
                case QUOTED:
                case SYM_BIND:
                case SYM_C:
                case SYM_LP:
                case SYM_RP:
                    {
                    alt1=3;
                    }
                    break;

                }

                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:8: comment
            	    {
            	    dbg.location(51,8);
            	    pushFollow(FOLLOW_comment_in_txt128);
            	    comment3=comment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, comment3.getTree());

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:18: inbind
            	    {
            	    dbg.location(51,18);
            	    pushFollow(FOLLOW_inbind_in_txt132);
            	    inbind4=inbind();

            	    state._fsp--;

            	    adaptor.addChild(root_0, inbind4.getTree());

            	    }
            	    break;
            	case 3 :
            	    dbg.enterAlt(3);

            	    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:51:27: txts
            	    {
            	    dbg.location(51,27);
            	    pushFollow(FOLLOW_txts_in_txt136);
            	    txts5=txts();

            	    state._fsp--;

            	    adaptor.addChild(root_0, txts5.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(52, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "txt");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "txt"

    public static class charactors_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "charactors"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:54:1: charactors : ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+ ;
    public final TwoWaySqlParser.charactors_return charactors() throws RecognitionException {
        TwoWaySqlParser.charactors_return retval = new TwoWaySqlParser.charactors_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set6=null;

        CommonTree set6_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "charactors");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(54, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:54:12: ( ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+ )
            dbg.enterAlt(1);

            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:55:2: ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+
            {
            root_0 = (CommonTree)adaptor.nil();

            dbg.location(55,2);
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:55:2: ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=IDENT && LA2_0<=SYM_RP)) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:
            	    {
            	    dbg.location(55,2);
            	    set6=(Token)input.LT(1);
            	    if ( (input.LA(1)>=IDENT && input.LA(1)<=SYM_RP) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (CommonTree)adaptor.create(set6));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        dbg.recognitionException(mse);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(56, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "charactors");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "charactors"

    public static class txts_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "txts"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:57:1: txts : charactors -> ^( TXTNODE charactors ) ;
    public final TwoWaySqlParser.txts_return txts() throws RecognitionException {
        TwoWaySqlParser.txts_return retval = new TwoWaySqlParser.txts_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TwoWaySqlParser.charactors_return charactors7 = null;


        RewriteRuleSubtreeStream stream_charactors=new RewriteRuleSubtreeStream(adaptor,"rule charactors");
        try { dbg.enterRule(getGrammarFileName(), "txts");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(57, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:57:6: ( charactors -> ^( TXTNODE charactors ) )
            dbg.enterAlt(1);

            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:58:2: charactors
            {
            dbg.location(58,2);
            pushFollow(FOLLOW_charactors_in_txts186);
            charactors7=charactors();

            state._fsp--;

            stream_charactors.add(charactors7.getTree());


            // AST REWRITE
            // elements: charactors
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 59:2: -> ^( TXTNODE charactors )
            {
                dbg.location(59,5);
                // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:59:5: ^( TXTNODE charactors )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(59,7);
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TXTNODE, "TXTNODE"), root_1);

                dbg.location(59,15);
                adaptor.addChild(root_1, stream_charactors.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(60, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "txts");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "txts"

    public static class comment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "comment"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:64:1: comment : ( begincomment | ifcomment | bindcomment | blockcomment | linecomment );
    public final TwoWaySqlParser.comment_return comment() throws RecognitionException {
        TwoWaySqlParser.comment_return retval = new TwoWaySqlParser.comment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TwoWaySqlParser.begincomment_return begincomment8 = null;

        TwoWaySqlParser.ifcomment_return ifcomment9 = null;

        TwoWaySqlParser.bindcomment_return bindcomment10 = null;

        TwoWaySqlParser.blockcomment_return blockcomment11 = null;

        TwoWaySqlParser.linecomment_return linecomment12 = null;



        try { dbg.enterRule(getGrammarFileName(), "comment");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(64, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:64:9: ( begincomment | ifcomment | bindcomment | blockcomment | linecomment )
            int alt3=5;
            try { dbg.enterDecision(3);

            try {
                isCyclicDecision = true;
                alt3 = dfa3.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:65:2: begincomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    dbg.location(65,2);
                    pushFollow(FOLLOW_begincomment_in_comment208);
                    begincomment8=begincomment();

                    state._fsp--;

                    adaptor.addChild(root_0, begincomment8.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:66:4: ifcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    dbg.location(66,4);
                    pushFollow(FOLLOW_ifcomment_in_comment213);
                    ifcomment9=ifcomment();

                    state._fsp--;

                    adaptor.addChild(root_0, ifcomment9.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:67:4: bindcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    dbg.location(67,4);
                    pushFollow(FOLLOW_bindcomment_in_comment218);
                    bindcomment10=bindcomment();

                    state._fsp--;

                    adaptor.addChild(root_0, bindcomment10.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:68:4: blockcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    dbg.location(68,4);
                    pushFollow(FOLLOW_blockcomment_in_comment223);
                    blockcomment11=blockcomment();

                    state._fsp--;

                    adaptor.addChild(root_0, blockcomment11.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:69:4: linecomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    dbg.location(69,4);
                    pushFollow(FOLLOW_linecomment_in_comment228);
                    linecomment12=linecomment();

                    state._fsp--;

                    adaptor.addChild(root_0, linecomment12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(70, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "comment");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "comment"

    public static class blockcomment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "blockcomment"
    // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:72:1: blockcomment : C_ST charactors C_ED -> ^( TXTNODE C_ST charactors C_ED ) ;
    public final TwoWaySqlParser.blockcomment_return blockcomment() throws RecognitionException {
        TwoWaySqlParser.blockcomment_return retval = new TwoWaySqlParser.blockcomment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token C_ST13=null;
        Token C_ED15=null;
        TwoWaySqlParser.charactors_return charactors14 = null;


        CommonTree C_ST13_tree=null;
        CommonTree C_ED15_tree=null;
        RewriteRuleTokenStream stream_C_ST=new RewriteRuleTokenStream(adaptor,"token C_ST");
        RewriteRuleTokenStream stream_C_ED=new RewriteRuleTokenStream(adaptor,"token C_ED");
        RewriteRuleSubtreeStream stream_charactors=new RewriteRuleSubtreeStream(adaptor,"rule charactors");
        try { dbg.enterRule(getGrammarFileName(), "blockcomment");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(72, 1);

        try {
            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:72:14: ( C_ST charactors C_ED -> ^( TXTNODE C_ST charactors C_ED ) )
            dbg.enterAlt(1);

            // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:73:2: C_ST charactors C_ED
            {
            dbg.location(73,2);
            C_ST13=(Token)match(input,C_ST,FOLLOW_C_ST_in_blockcomment239);  
            stream_C_ST.add(C_ST13);

            dbg.location(73,7);
            pushFollow(FOLLOW_charactors_in_blockcomment241);
            charactors14=charactors();

            state._fsp--;

            stream_charactors.add(charactors14.getTree());
            dbg.location(73,18);
            C_ED15=(Token)match(input,C_ED,FOLLOW_C_ED_in_blockcomment243);  
            stream_C_ED.add(C_ED15);



            // AST REWRITE
            // elements: C_ED, charactors, C_ST
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 74:2: -> ^( TXTNODE C_ST charactors C_ED )
            {
                dbg.location(74,5);
                // D:\\development\\java\\workspace-3.4\\werkzeugkasten\\twowaysql\\twowaysql\\grammar\\TwoWaySql.g:74:5: ^( TXTNODE C_ST charactors C_ED )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(74,7);
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TXTNODE, "TXTNODE"), root_1);

                dbg.location(74,15);
                adaptor.addChild(root_1, stream_C_ST.nextNode());
                dbg.location(74,20);
                adaptor.addChild(root_1, stream_charactors.nextTree());
                dbg.location(74,31);
                adaptor.addChild(root_1, stream_C_ED.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(75, 2);

        }
        finally {
